--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,13 +41,13 @@ dependencies {
     }
 
     // image related
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.makeramen:roundedimageview:2.2.0'
     compile 'com.bm.photoview:library:1.4.0'
 
     // http library
-    compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
 
     // gson library
     compile 'com.google.code.gson:gson:2.4'
