--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,14 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-sites.pro'
         }
     }
+}
+
+repositories {
+    maven { url "https://jitpack.io" }
+    jcenter()
 }
 
 dependencies {
@@ -25,30 +30,27 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
 
-    //butterknife
-    compile 'com.jakewharton:butterknife:8.2.1'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
     //Pull Load More
     compile("com.wuxiaolong.pullloadmorerecyclerview:library:1.0.9") {
         exclude group: 'com.android.support'
     }
-
-    // image related
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.makeramen:roundedimageview:2.2.0'
-    compile 'com.bm.photoview:library:1.4.0'
-
-    // http library
-    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
-
-    // gson library
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.github.vajro:MaterialDesignLibrary:1.6'
+    compile 'com.balysv:material-ripple:1.0.2'
+    compile 'com.android.support:support-v4:23.4.0'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+
+    compile 'com.github.jhy:jsoup:jsoup-1.9.2'
 }
