--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.github.jhy:jsoup:jsoup-1.9.2'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
 }
