--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "ml.puredark.hviewer"
@@ -39,10 +39,12 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
+    compile 'net.opacapp:multiline-collapsingtoolbar:1.2.2'
+
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -51,14 +53,11 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.github.vajro:MaterialDesignLibrary:1.6'
     compile 'com.balysv:material-ripple:1.0.2'
-    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.github.jhy:jsoup:jsoup-1.9.2'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
-    compile 'com.github.chemouna:shadow-layout:b014ac2237'
     compile 'com.github.clans:fab:1.6.1'
-    compile 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
 
 
     // Zxing libraries
