--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,19 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".activities.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.CollectionActivity"></activity>
+        <activity android:name=".activities.CollectionActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".activities.PictureViewerActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
