--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,15 +39,13 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
+    // Zxing libraries
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'net.opacapp:multiline-collapsingtoolbar:1.2.2'
-
     compile 'com.jakewharton:butterknife:8.2.1'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.makeramen:roundedimageview:2.2.0'
     compile 'com.google.code.gson:gson:2.4'
@@ -55,13 +53,11 @@ dependencies {
     compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.github.jhy:jsoup:jsoup-1.9.2'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    testCompile 'junit:junit:4.12'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
-
     compile 'com.github.clans:fab:1.6.1'
-
-
-    // Zxing libraries
     compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
     compile 'com.google.zxing:core:3.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
+
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
 }
