--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity"
+        <activity
+            android:name=".activities.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +28,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.CollectionActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".activities.PictureViewerActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.CollectionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.PictureViewerActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.SettingActivity"></activity>
     </application>
 
 </manifest>
