--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,10 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
-    // Zxing libraries
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'net.opacapp:multiline-collapsingtoolbar:1.2.2'
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
