--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    compile 'net.opacapp:multiline-collapsingtoolbar:1.2.2'
+    compile 'com.github.rengwuxian:MaterialEditText:2.1.4'
+    compile 'com.github.opacapp:multiline-collapsingtoolbar:v1.2.2'
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.nineoldandroids:library:2.4.0'
