make lint error recoverable.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-sites.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 repositories {
