--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-x86-android-23
 
+script: ./gradlew build
+
 jdk:
   - oraclejdk8
 
