--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,16 @@
         <activity
             android:name=".activities.PictureViewerActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activities.SettingActivity" />
-        <activity android:name=".activities.AddSiteActivity" />
-        <activity android:name=".activities.AddFeedActivity"></activity>
+        <activity android:name=".activities.SettingActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.AddSiteActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.MyCaptureActivity"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
 
 </manifest>
