add fir.im for travis.ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,8 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
+before_install:
+  - gem install fir-cli
+after_deploy:
+  - fir p app/build/outputs/apk/app-release.apk -T $FIR_TOKEN -c "`git cat-file tag $TRAVIS_TAG`"
