--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "ml.puredark.hviewer"
         minSdkVersion 17
-        targetSdkVersion 24
+        targetSdkVersion 22
         versionCode 1
         versionName "0.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -61,15 +61,16 @@ dependencies {
     
     //image
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.makeramen:roundedimageview:2.2.0'
+
+    //http
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     
     //format, gson, jsoup, etc
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.github.jhy:jsoup:jsoup-1.9.2'
-    
-    //http
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     
     //zxing
     compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
