--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,12 +46,24 @@
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"
             android:windowSoftInputMode="stateAlwaysHidden" />
-        <activity android:name=".activities.ModifySiteActivity"
+        <activity
+            android:name=".activities.ModifySiteActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activities.FavouriteActivity"
+        <activity
+            android:name=".activities.FavouriteActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activities.HistoryActivity"
-            android:screenOrientation="portrait" ></activity>
+        <activity
+            android:name=".activities.HistoryActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.DownloadActivity"></activity>
+
+
+
+        <service android:name=".services.DownloadService">
+            <intent-filter>
+                <action android:name="ml.puredark.hviewer.services.DownloadService" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
