--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 .externalNativeBuild
 
 # Built application files
-*.apk
 *.ap_
  
 # Files for the Dalvik VM
@@ -43,3 +42,4 @@ Thumbs.db
 .idea/tasks.xml
 .idea/datasources.xml
 .idea/dataSources.ids
+/images/raws
