--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.AddSiteActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activities.MyCaptureActivity"
             android:screenOrientation="portrait"
@@ -48,7 +49,8 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".activities.ModifySiteActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activities.FavouriteActivity"
             android:screenOrientation="portrait" />
