Revert "Update .travis.yml"
This reverts commit 9d230b36a874b61c7890c42890f2ea44c73fb342.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,19 +20,17 @@ android:
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     - sys-img-x86-android-23
-  licenses:
-    - 'android-sdk-license.*'
 
 script: ./gradlew build connectedCheck
 
 jdk:
   - oraclejdk8
 
-# before_install:
-#   - mkdir -p $ANDROID_HOME/licenses
-#   # The hash may change in the future
-#   - echo '8933bad161af4178b1185d1a37fbf41ea5269c55' > $ANDROID_HOME/licenses/android-sdk-license
-#   - echo '84831b9409646a918e30573bab4c9c91346d8abd' > $ANDROID_HOME/licenses/android-sdk-preview-license
+before_install:
+  - mkdir -p $ANDROID_HOME/licenses
+  # The hash may change in the future
+  - echo '8933bad161af4178b1185d1a37fbf41ea5269c55' > $ANDROID_HOME/licenses/android-sdk-license
+  - echo '84831b9409646a918e30573bab4c9c91346d8abd' > $ANDROID_HOME/licenses/android-sdk-preview-license
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
