remove user-specified config from gradle.properties.

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Mon Aug 08 21:22:29 CST 2016
-systemProp.http.proxyHost=localhost
-org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=1080
+
+# All user-specified configuration should go to ~/.gradle/gradle.properties but NOT here
+
+
