--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,5 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
-# All user-specified configuration should go to ~/.gradle/gradle.properties but NOT here
-
-
+#Sun Aug 21 18:28:25 CST 2016
+org.gradle.jvmargs=-Xmx1536m
