--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="ml.puredark.hviewer.customs.CustomCachingGlideModule"
             android:value="GlideModule" />
@@ -41,7 +40,7 @@
         <activity
             android:name=".activities.AddSiteActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activities.MyCaptureActivity"
             android:screenOrientation="portrait"
@@ -51,7 +50,7 @@
         <activity
             android:name=".activities.ModifySiteActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activities.FavouriteActivity"
             android:screenOrientation="portrait" />
@@ -76,7 +75,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.AboutActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.LoginActivity"></activity>
     </application>
 
 </manifest>
