--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,16 +61,16 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
     
     //image
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+    compile 'com.facebook.fresco:fresco:0.13.0'
+    compile 'com.facebook.fresco:animated-gif:0.13.0'
+    compile "com.facebook.fresco:imagepipeline-okhttp3:0.12.0+"
+    compile 'me.relex:photodraweeview:1.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.makeramen:roundedimageview:2.2.0'
 
     //http
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
 
     //email
-//    compile 'com.github.yesidlazaro:GmailBackground:1.1'
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
     compile files('libs/mail.jar')
