--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "ml.puredark.hviewer"
         minSdkVersion 17
         targetSdkVersion 22
-        versionCode 18
-        versionName "0.3.5"
+        versionCode 19
+        versionName "0.3.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -28,6 +28,7 @@ repositories {
     maven { url "https://jitpack.io" }
     maven { url "http://kodbiro.github.io/repo/" }
     maven { url "http://dl.bintray.com/glomadrian/maven" }
+    maven { url 'http://guardian.github.com/maven/repo-releases' }
     jcenter()
 }
 
@@ -83,6 +84,10 @@ dependencies {
     //zxing
     compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
     compile 'com.google.zxing:core:3.2.0'
+
+    // directory chooser
+    compile 'com.gu:option:1.3'
+    compile ('net.rdrei.android.dirchooser:library:3.2@aar');
 
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
