--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,15 @@ android {
     lintOptions {
         abortOnError false
     }
+    productFlavors {
+        wandoujia {}
+        coolapk {}
+        github {}
+        productFlavors.all { flavor ->
+            flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+        }
+
+    }
 }
 
 repositories {
@@ -43,6 +52,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
+
+    //umeng analytics
+    compile 'com.umeng.analytics:analytics:latest.integration'
 
     //material widget
     compile 'com.github.vajro:MaterialDesignLibrary:1.6'
