--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 24
@@ -12,6 +12,10 @@ android {
         versionName "0.6.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -29,11 +33,24 @@ android {
         productFlavors.all { flavor ->
             flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
         }
+    }
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
     }
 }
 
 repositories {
+    mavenCentral()
     maven { url "https://jitpack.io" }
     maven { url "http://kodbiro.github.io/repo/" }
     maven { url "http://dl.bintray.com/glomadrian/maven" }
@@ -42,20 +59,19 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.0'
+    testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     //Google offical
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
-
     //umeng analytics
     compile 'com.umeng.analytics:analytics:latest.integration'
-
     //material widget
     compile 'com.github.vajro:MaterialDesignLibrary:1.6'
     compile 'com.github.opacapp:multiline-collapsingtoolbar:v1.2.2'
@@ -64,50 +80,40 @@ dependencies {
     compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.github.MiguelCatalan:MaterialSearchView:v1.4.0'
     compile 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
-    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.9.3@aar'){
-        transitive=true
+    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.9.3@aar') {
+        transitive = true
     }
     compile 'com.github.leonardarnold:NumberPickerPreference:bea5996cc9'
-
     //Pull Load More
-    compile("com.wuxiaolong.pullloadmorerecyclerview:library:1.0.9") {
+    compile('com.wuxiaolong.pullloadmorerecyclerview:library:1.0.9') {
         exclude group: 'com.android.support'
     }
-
     // SwipeBack
-//    compile 'me.majiajie:swipe-back:1.0.0-alpha2'
+    //    compile 'me.majiajie:swipe-back:1.0.0-alpha2'
 
     //butter knife
     compile 'com.jakewharton:butterknife:8.2.1'
-    
     //image
     compile 'com.facebook.fresco:fresco:0.13.0'
     compile 'com.facebook.fresco:animated-gif:0.13.0'
-    compile "com.facebook.fresco:imagepipeline-okhttp3:0.12.0+"
+    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
     compile 'me.relex:photodraweeview:1.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
-
     //http
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-
     //email
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
     compile files('libs/mail.jar')
     compile files('libs/commons-email-1.4.jar')
-    
     //format, gson, jsoup, etc
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.github.jhy:jsoup:jsoup-1.9.2'
-    
     //zxing
     compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
     compile 'com.google.zxing:core:3.2.0'
-
     // directory chooser
     compile 'com.gu:option:1.3'
-    compile ('net.rdrei.android.dirchooser:library:3.2@aar');
-
-    testCompile 'junit:junit:4.12'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    compile 'net.rdrei.android.dirchooser:library:3.2@aar'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
 }
