--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "ml.puredark.hviewer"
         minSdkVersion 17
         targetSdkVersion 22
-        versionCode 44
-        versionName "0.6.7"
+        versionCode 45
+        versionName "0.6.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -98,10 +98,15 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.13.0'
     compile 'com.facebook.fresco:animated-gif:0.13.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
-    compile 'me.relex:photodraweeview:1.1.0'
+    //compile 'me.relex:photodraweeview:1.1.0'
+    compile 'com.github.PureDark:PhotoDraweeView:2b889241bc'
     compile 'com.nineoldandroids:library:2.4.0'
     //http
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+
+    //httpdns
+    compile project (':httpdns')
+
     //email
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
