--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,8 +98,10 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.13.0'
     compile 'com.facebook.fresco:animated-gif:0.13.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
-    //compile 'me.relex:photodraweeview:1.1.0'
-    compile 'com.github.PureDark:PhotoDraweeView:2b889241bc'
+//    compile 'me.relex:photodraweeview:1.1.0'
+    compile 'com.github.PureDark:PhotoDraweeView:2c7b7f65b1'
+//    compile project (':photodraweeview')
+
     compile 'com.nineoldandroids:library:2.4.0'
     //http
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
