--- a/httpdns/src/main/AndroidManifest.xml
+++ b/httpdns/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="ml.puredark.httpdns">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sina.util.dnscache">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
