--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,7 +122,9 @@ dependencies {
     //format, gson, jsoup, etc
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.github.jhy:jsoup:jsoup-1.9.2'
-    compile 'com.jayway.jsonpath:json-path:2.2.0'
+    compile('com.jayway.jsonpath:json-path:2.2.0'){
+        exclude group: 'org.ow2.asm'
+    }
     //zxing
     compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
     compile 'com.google.zxing:core:3.2.0'
