--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,10 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-#Sun Aug 21 18:28:25 CST 2016
-org.gradle.jvmargs=-Xmx1536m
+#Tue Nov 15 11:33:26 CST 2016
+org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048m
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=8008
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=8008
