根据android N新的使用作用域目录访问修改,备份还原修改用Gson

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,8 @@
         <activity android:name=".ui.activities.VideoViewerActivity"
             android:hardwareAccelerated="true"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="user" ></activity>
+            android:screenOrientation="user" />
+
     </application>
 
 </manifest>
