--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,13 +36,13 @@ android {
     defaultConfig {
         applicationId "ml.puredark.hviewer"
         resValue "string", "app_name", "H-Viewer"
-        minSdkVersion 24
+        minSdkVersion 20
         targetSdkVersion 24
         versionCode 61
         versionName "0.8.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        project.ext.set("archivesBaseName", "H-Viewer_by_GE" + VERSION_DATE);
+        project.ext.set("archivesBaseName", "H-Viewer_by_GE");
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
