--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 ext {
     VERSION_DATE = new Date().format("yy-MM-dd", TimeZone.getTimeZone("UTC"))
-    SUPPORT_LIBRARY_VERSION = '25.0.1'
-    BUILD_TOOLS = "25.0.0"
+    BUILD_TOOLS = "25.0.2"
 }
 
 def gitVersionCode() {
@@ -33,13 +32,13 @@ android {
     defaultConfig {
         applicationId "ml.puredark.hviewer"
         resValue "string", "app_name", "H-Viewer"
-        minSdkVersion 25
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 100
         versionName "1.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        project.ext.set("archivesBaseName", "H-Viewer byGE");
+        project.ext.set("archivesBaseName", "H-Viewer byGE " + gitVersionTag());
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -105,12 +104,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     //umeng analytics
     compile 'com.umeng.analytics:analytics:latest.integration'
     //material widget
     compile 'com.github.vajro:MaterialDesignLibrary:1.6'
-    compile 'com.github.opacapp:multiline-collapsingtoolbar:v1.2.2'
+    compile 'com.github.opacapp:multiline-collapsingtoolbar:v1.3.1'
     compile 'com.github.rengwuxian:MaterialEditText:2.1.4'
     compile 'com.github.clans:fab:1.6.1'
     compile 'com.balysv:material-ripple:1.0.2'
